# lolzteam-mcp

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  _config.yml  pyproject.toml
examples/: claude_code.json  claude_desktop.json
lolzteam_mcp/: __init__.py  __main__.py  client.py  config.py  openapi.py  server.py
